@@ -39,9 +39,9 @@ q2 <- GenerateQualificationRequirement(c("Locale","Approved"),
                                        c("==",">"), 
                                        c("US",90), 
                                        preview = TRUE)
-# one QualificationRequirement using the `In` comparator
+# one QualificationRequirement using the 'In' comparator
 q3 <- GenerateQualificationRequirement("Locale","In","US,GB")
-# two QualificationRequirements using the `In` comparator
+# two QualificationRequirements using the 'In' comparator
 q4 <- GenerateQualificationRequirement(c("Locale","Approved"), 
                                        c("==",">"), 
                                        c("US,GB,DK",90), 
@@ -53,6 +53,11 @@ q5 <- GenerateQualificationRequirement("Approved", "Exists", "")
 q6 <- GenerateQualificationRequirement("Masters", "DoesNotExist", "")
 
 # U.S. state locale value
-q7 <- GenerateQualificationRequirement("Locale","==","US-MN")
+q7a <- GenerateQualificationRequirement("Locale","==","US-MN")
+## with multiple states and an 'In' operator
+q7b <- GenerateQualificationRequirement("Locale","In","US-MN,US-IL")
+
+# Complex locale values
+q8 <- GenerateQualificationRequirement("Locale","In","US-NY,US-WA,CA")
 }
 \keyword{Qualifications}
